[tool.poetry]
authors = ["René Filip"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "Framework to create your own Signal bots"
exclude = ["tests/"]
keywords = [
  "Signal",
  "Bot",
  "Framework",
  "Home Automation",
]
license = "MIT"
maintainers = ["René Filip", "Era Dorta"]
name = "signalbot"
readme = "README.md"
repository = "https://github.com/filipre/signalbot"
version = "0.14.0"

[tool.poetry.dependencies]
APScheduler = ">=3.11.0"
aiohttp = ">=3.11.9"
python = ">=3.9"
redis = {version=">=5.2.0", optional=true}
websockets = ">=14.1"
phonenumbers = ">=8.13.54"

[tool.poetry.dev-dependencies]
black = ">=24.10.0"
flake8 = ">=7.1.1"
pre-commit = ">=4.0.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.extras]
redis = ["redis"]
