[tool.poetry]
authors = ["René Filip"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "Framework to create your own Signal bots"
exclude = ["tests/"]
keywords = [
  "Signal",
  "Bot",
  "Framework",
  "Home Automation",
]
license = "MIT"
maintainers = ["René Filip", "Era Dorta"]
name = "signalbot"
readme = "README.md"
repository = "https://github.com/filipre/signalbot"
version = "0.21.0"

[tool.poetry.dependencies]
APScheduler = ">=3.11.0"
aiohttp = ">=3.11.9"
python = ">=3.9"
redis = {version=">=5.2.0", optional=true}
websockets = ">=14.1"
phonenumbers = ">=8.13.54"
pydantic = ">=2.12.3"
packaging = ">=25.0"

[tool.poetry.group.dev.dependencies]
black = ">=24.10.0"
flake8 = ">=7.1.1"
pre-commit = ">=4.0.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.extras]
redis = ["redis"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",   # Docstrings
  "FIX", # TODO, FIXME and other messages
  "ERA001", # Commented out code
  "COM812", # Trailing commas, the formatter already does this
]

[tool.ruff.lint.per-file-ignores]
# Tests can ignore a few extra rules
"tests/**.py" = [
    "ANN201", # Missing return type annotation for public function
    "S101",   # Use of assert is detected
    "INP001", # Missing __init__.py file
]
