[project]
authors = [{name = "René Filip"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "Framework to create your own Signal bots"
keywords = [
  "Signal",
  "Bot",
  "Framework",
  "Home Automation",
]
license = "MIT"
maintainers = [{name = "René Filip"}, {name = "Era Dorta"}]
name = "signalbot"
readme = "README.md"
requires-python = ">=3.9"
version = "0.22.0"
dependencies = [
  "APScheduler>=3.11.0",
  "aiohttp>=3.11.9",
  "websockets>=14.1",
  "phonenumbers>=8.13.54",
  "pydantic>=2.12.3",
  "packaging>=25.0",
]

[project.optional-dependencies]
redis = ["redis>=5.2.0"]

[dependency-groups]
dev = [
  "prek>=0.3.0",
]

[project.urls]
repository = "https://github.com/filipre/signalbot"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",   # Docstrings
  "FIX", # TODO, FIXME and other messages
  "ERA001", # Commented out code
  "COM812", # Trailing commas, the formatter already does this
]

[tool.ruff.lint.per-file-ignores]
# Tests can ignore a few extra rules
"tests/**.py" = [
    "ANN201", # Missing return type annotation for public function
    "S101",   # Use of assert is detected
    "INP001", # Missing __init__.py file
]
