[metadata]
name = signalbot
version = 0.2.2
author = René Filip
description = Package to build Signal bots
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/filipre/signalbot
project_urls =
    Bug Tracker = https://github.com/filipre/signalbot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    websockets
    apscheduler
    redis
    aiohttp

[options.packages.find]
where = src